just added generics support to many classes